--- a/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.css
+++ b/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.css
@@ -1,58 +1,36 @@
-.p-menu .p-menuitem-link {
-    text-decoration: none !important;
+.sidebar {
+    margin: 0;
+    padding: 0px;
+    height: 95vh;
+    background: hsl(204deg 100% 94.83%);
+    background: linear-gradient(280deg,
+            hsl(0deg 0% 100%) 0%,
+            hsl(0deg 0% 96.21%) 100%);
+    background: -moz-linear-gradient(280deg,
+            hsl(0deg 0% 100%) 0%,
+            hsl(0deg 0% 96.21%) 100%);
+    background: -webkit-linear-gradient(280deg,
+            hsl(0deg 0% 100%) 0%,
+            hsl(0deg 0% 96.21%) 100%);
+    backdrop-filter: blur(18.5px);
+    border-radius: 0;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    position: relative;
+    z-index: 1;
+    overflow: auto;
 }
 
-/* .sidebar:after{
-        position: absolute;
-      background-color: #cdd3f4;
-      height: 600px;
-      width: 600px;
-      content: "";
-      left: 80px;
-      filter: blur(200px);
-      bottom: -110px;
-      opacity: 0.3;
-      z-index: 1;
-  } */
-.main-layout {
-    display: flex;
-    flex-direction: row;
+::ng-deep .p-menu {
+    padding: 0px;
+    background-color: #F8F8F8;
+    border: 0px;
 }
 
-ul li {
-    padding: 10px 40px;
+::ng-deep .p-menu-list {
+    padding-left: 0px;
 }
 
-header {
-    background: red;
-    color: #fff;
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-header button {
-    margin-right: 20px;
-    z-index: 9;
-}
-
-.p-menuitem-text {}
-
-.toggle-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
-    border: none;
-    z-index: 9;
-}
-
-.p-menuitem p-menubarsub {
-    display: block;
-}
-
-.brand-img {
-    margin-bottom: 40px !important;
-    display: inline-block;
+::ng-deep .p-menu .p-menuitem-link {
+    text-decoration: none;
+    padding: 0.5rem 1.25rem;
 }
