--- a/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,3 @@
 <aside class="sidebar">
-    <p-sidebar [visible]="true" [modal]="false">
-        <p-menu [model]="menuItems" />
-    </p-sidebar>
+    <p-menu [model]="menuItems" [style]="{ height: '300px' }" />
 </aside>
