--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -1,14 +1,23 @@
 <div class="">
-    <div class="card col-md-12">
+    <div class="card w-100  col-md-12 header">
         <div class="contain-card">
-            <div class="d-flex justify-content-between" style="background-color: #F9FAFB;">
-                <div class="col-sm header">
-                    <h3>Logo</h3>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex flex-row">
+                    <div class="">
+                        <h3>Logo</h3>
+                    </div>
+                    <button class="btn toggleMenuBtn" *ngIf="!isMenubarVisible" (click)="ToggleMenuBar()">
+                        <i class="pi pi-angle-double-right" style="font-size: 1.5rem"></i>
+                    </button>
+                    <button class="btn toggleMenuBtn" *ngIf="isMenubarVisible" (click)="ToggleMenuBar()"
+                        style="margin-left: 5rem;">
+                        <i class="pi pi-angle-double-left" style="font-size: 1.5rem"></i>
+                    </button>
                 </div>
-                <div class="col-sm header d-flex justify-content-end">
-                    <button class="border-0  user-d-button p-0 " style="background-color: #F9FAFB;">
+                <div class="d-flex justify-content-end align-items-center">
+                    <button class="border-0 p-0 " style="background-color: #F9FAFB;">
                         <p-avatar icon="pi pi-user" styleClass="mr-2" size="xlarge" shape="circle" />
-                        <span class="font-weight-bold" style="font-size: 16px;">
+                        <span class="font-weight-bold" style="font-size: 20px;">
                             Login
                         </span>
                     </button>
@@ -16,8 +25,125 @@
             </div>
         </div>
     </div>
+    <div class="nav d-flex body-container">
+        <div *ngIf="isMenubarVisible" class="position-fixed">
+            <app-nav-bar></app-nav-bar>
+        </div>
+        <div (click)="OnClickBodyPage()">
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
 
-    <div class="nav">
-        <app-nav-bar></app-nav-bar>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
+                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
+                aliquid at, assumenda veniam?</h1>
+
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+            <h1>Hello</h1>
+
+        </div>
     </div>
 </div>
