Admin menubar added.

--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -27,123 +27,10 @@
     </div>
     <div class="nav d-flex body-container">
         <div *ngIf="isMenubarVisible" class="position-fixed">
-            <app-nav-bar></app-nav-bar>
+            <nav-bar></nav-bar>
         </div>
         <div (click)="OnClickBodyPage()">
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-            <h1>Hello Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores facilis vel iste id
-                doloremque culpa illum aliquam. Soluta ab in obcaecati doloremque, tempore modi dicta, repudiandae
-                aliquid at, assumenda veniam?</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-            <h1>Hello</h1>
-
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
