--- a/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
 <aside class="sidebar">
-    <p-menu #menu [model]="menuItems" />
+    <p-menu #menu [model]="publicNavBarItems" />
+    <p-panelMenu [model]="adminNavBarItems" />
 </aside>
