Login Page created.

--- a/Code/DahitanGhar/Client/src/app/app.component.css
+++ b/Code/DahitanGhar/Client/src/app/app.component.css
@@ -22,3 +22,14 @@
     height: fit-content;
     width: fit-content;
 }
+
+/* Body of login component (p-dialog)*/
+::ng-deep .p-dialog-content,
+::ng-deep .p-dialog-header {
+    background-color: #1F2937;
+}
+
+/* Header of login component (p-dialog) */
+::ng-deep .p-dialog .p-dialog-header .p-dialog-title {
+    color: white;
+}
