--- a/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Code/DahitanGhar/Client/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="sidebar" style="width: fit-content;">
     <p-menu #menu [model]="publicNavBarItems" />
     <p-panelMenu [model]="adminNavBarItems" />
 </aside>
