--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -15,7 +15,7 @@
                     </button>
                 </div>
                 <div class="d-flex justify-content-end align-items-center">
-                    <button class="border-0 p-0 " style="background-color: #F9FAFB;">
+                    <button class="border-0 p-0 " style="background-color: #F9FAFB;" (click)="ShowLoginPage()">
                         <p-avatar icon="pi pi-user" styleClass="mr-2" size="xlarge" shape="circle" />
                         <span class="font-weight-bold" style="font-size: 20px;">
                             Login
@@ -33,4 +33,14 @@
             <router-outlet></router-outlet>
         </div>
     </div>
+
+
+    <!-- User login page -->
+    <div class="login-page">
+        <p-dialog header="Login" [modal]="true" [(visible)]="isLoginPageVisible" draggable="false" position="center"
+            [closable]="true" [style]="{ 'background-color': '#1F2937' }">
+            <login></login>
+        </p-dialog>
+    </div>
+
 </div>
