Db Context and UserEntity Mappings

--- a/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
+++ b/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
@@ -7,4 +7,8 @@
         necessitatibus esse a alias repellendus, voluptatem, maxime assumenda aliquid quam dignissimos facilis,
         doloribus soluta labore cum magni.
     </div>
+
+    <div>
+        <button (click)="getUsers()">GetUsers</button>
+    </div>
 </div>
