Swaggger fixed and Medaitor Implemented.

--- a/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
+++ b/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <div class="contain-card">
+    <h2>Some more context sss jkdhhdjh jhjdh</h2>
     <div class="homepage-header">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat optio autem id praesentium illo illum, cum
         expedita, eveniet, ex ratione ipsa laborum vitae consequuntur excepturi numquam iure aspernatur quisquam
@@ -9,6 +10,6 @@
     </div>
 
     <div>
-        <button (click)="getUsers()">GetUsers</button>
+        <!-- <button (click)="getUsers()">GetUsers</button> -->
     </div>
 </div>
