--- a/Code/DahitanGhar/Client/src/app/auth/login/login.component.html
+++ b/Code/DahitanGhar/Client/src/app/auth/login/login.component.html
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div class="col-md-12 mt-4 mb-2 d-flex flex-column align-items-center">
-        <button type="button" class="btn btn-secondary w-50">Log In</button>
+        <button type="button" class="btn btn-secondary w-50" (click)="LogIn()">Log In</button>
     </div>
 </div>
