--- a/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
+++ b/Code/DahitanGhar/Client/src/app/home-page/home-page.component.html
@@ -1,15 +1,6 @@
-<div class="contain-card">
-    <h2>Some more context sss jkdhhdjh jhjdh</h2>
-    <div class="homepage-header">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat optio autem id praesentium illo illum, cum
-        expedita, eveniet, ex ratione ipsa laborum vitae consequuntur excepturi numquam iure aspernatur quisquam
-        corrupti.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate illo reprehenderit tempora nulla
-        necessitatibus esse a alias repellendus, voluptatem, maxime assumenda aliquid quam dignissimos facilis,
-        doloribus soluta labore cum magni.
-    </div>
-
-    <div>
-        <!-- <button (click)="getUsers()">GetUsers</button> -->
+<div class="container-fluid">
+    <div class="d-flex justify-content-end mt-3">
+        <button type="button" class="btn btn-primary me-2">Book Order</button>
+        <button type="button" class="btn btn-primary">Check Rooms & Rates</button>
     </div>
 </div>
