--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -1,46 +1,1 @@
-<div class="">
-    <div class="card w-100  col-md-12 header">
-        <div class="contain-card">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex flex-row">
-                    <div class="">
-                        <h3>Logo</h3>
-                    </div>
-                    <button class="btn toggleMenuBtn" *ngIf="!isMenubarVisible" (click)="ToggleMenuBar()">
-                        <i class="pi pi-angle-double-right" style="font-size: 1.5rem"></i>
-                    </button>
-                    <button class="btn toggleMenuBtn" *ngIf="isMenubarVisible" (click)="ToggleMenuBar()"
-                        style="margin-left: 5rem;">
-                        <i class="pi pi-angle-double-left" style="font-size: 1.5rem"></i>
-                    </button>
-                </div>
-                <div class="d-flex justify-content-end align-items-center">
-                    <button class="border-0 p-0 " style="background-color: #F9FAFB;" (click)="ShowLoginPage()">
-                        <p-avatar icon="pi pi-user" styleClass="mr-2" size="xlarge" shape="circle" />
-                        <span class="font-weight-bold" style="font-size: 20px;">
-                            Login
-                        </span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="body-container">
-        <div *ngIf="isMenubarVisible" class="position-fixed">
-            <nav-bar></nav-bar>
-        </div>
-        <!-- All pages are loaded here -->
-        <div (click)="OnClickBodyPage()">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-
-    <!-- User login page -->
-    <div class="login-page">
-        <p-dialog header="Login" [modal]="true" [(visible)]="isLoginPageVisible" draggable="false" position="center"
-            [closable]="true" [style]="{ 'background-color': '#1F2937' }">
-            <login></login>
-        </p-dialog>
-    </div>
-
-</div>
+<h1>App started</h1>
