Initial setup: Fonts,Sacings configured.

--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -1,1 +1,21 @@
-<h1>App is running</h1>
+<div class="ele-container" style="background-color: red;">
+    <header-section></header-section>
+</div>
+
+<div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+    <h1>Immerse yourself in the rich cultural</h1>
+    <h2>Immerse yourself in the rich cultural</h2>
+
+    <h2>Immerse yourself in the rich cultural</h2>
+
+    <h4>Immerse yourself in the rich cultural</h4>
+
+    <h5>Immerse yourself in the rich cultural</h5>
+
+    <h6>Immerse yourself in the rich cultural</h6>
+
+</div>
+
+<div style="height: 40px; background-color: rgb(24, 20, 10);">
+    <span>This is footer</span>
+</div>
