--- a/Code/DahitanGhar/Client/src/app/header/header.component.html
+++ b/Code/DahitanGhar/Client/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>hello worlds</p>
+<div class="ele-container">
+    <div class="header-bar">
+        <p-menubar [model]="items" />
+    </div>
+</div>
