--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -1,21 +1,116 @@
-<div>
-    <header-section></header-section>
-</div>
+<div class="main-layout">
+    <header class="header">
+        <a (click)="ToggleSidebar()" class="toggle-menu-bar">
+            <i class="pi pi-bars"></i>
+        </a>
+        <header-section></header-section>
+    </header>
 
-<div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
-    <h1>Immerse yourself in the rich cultural</h1>
-    <h2>Immerse yourself in the rich cultural</h2>
+    <nav class="menu" *ngIf="isSidebarVisible">
+        <app-sidebar></app-sidebar>
+    </nav>
+    <main class="main">
+        <div style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
 
-    <h2>Immerse yourself in the rich cultural</h2>
+            <h2>Immerse yourself in the rich cultural</h2>
 
-    <h4>Immerse yourself in the rich cultural</h4>
+            <h4>Immerse yourself in the rich cultural</h4>
 
-    <h5>Immerse yourself in the rich cultural</h5>
+            <h5>Immerse yourself in the rich cultural</h5>
 
-    <h6>Immerse yourself in the rich cultural</h6>
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
 
-</div>
+            <h2>Immerse yourself in the rich cultural</h2>
 
-<div style="height: 40px; background-color: rgb(24, 20, 10);">
-    <span>This is footer</span>
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+        <div class="ele-container" style="background-color: rgba(179, 245, 204, 0.975);">
+            <h1>Immerse yourself in the rich cultural</h1>
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h2>Immerse yourself in the rich cultural</h2>
+
+            <h4>Immerse yourself in the rich cultural</h4>
+
+            <h5>Immerse yourself in the rich cultural</h5>
+
+            <h6>Immerse yourself in the rich cultural</h6>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div>
+            <span>This is footer</span>
+        </div>
+    </footer>
 </div>
