--- a/Code/DahitanGhar/Client/src/app/header/header.component.html
+++ b/Code/DahitanGhar/Client/src/app/header/header.component.html
@@ -1,5 +1,1 @@
-<div class="ele-container">
-    <div class="header-bar">
-        <p-menubar [model]="items" />
-    </div>
-</div>
+<h1>This is header</h1>
