--- a/Code/DahitanGhar/Client/src/app/header/header.component.html
+++ b/Code/DahitanGhar/Client/src/app/header/header.component.html
@@ -1,1 +1,14 @@
-<h1>This is header</h1>
+<div class="header-container">
+    <div class="logo">
+        Dahitan Ghar
+    </div>
+    <div class="btn-header-actions">
+        <button class="btn-book-table">
+            Book Table
+        </button>
+
+        <button class="btn-reserve-room">
+            Reserve Room
+        </button>
+    </div>
+</div>
