--- a/Code/DahitanGhar/Client/src/app/header/header.component.html
+++ b/Code/DahitanGhar/Client/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
     <div class="logo">
-        Dahitan Ghar
+        <img src="logo.png" alt="logo">
     </div>
     <div class="btn-header-actions">
         <button class="btn-book-table">
