--- a/Code/DahitanGhar/Client/src/app/app.component.css
+++ b/Code/DahitanGhar/Client/src/app/app.component.css
@@ -19,12 +19,14 @@
     display: flex;
     padding: 15px 1%;
     align-items: center;
+    z-index: 1000;
 }
 
 .menu {
     grid-area: menu;
     position: fixed;
     height: 100vh;
+    z-index: 1000;
 }
 
 .main {
