--- a/Code/DahitanGhar/Client/src/app/home/home.component.html
+++ b/Code/DahitanGhar/Client/src/app/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<div>
+    <!-- We need this caurosal. Its taking very high z-index, so for now we do not use it. -->
+    <p-carousel [value]="products" [numVisible]="1" [numScroll]="1" [circular]="true"
+        [responsiveOptions]="responsiveOptions" autoplayInterval="3000" contentClass="carousal">
+        <ng-template let-product #item>
+            <div class="carousel-item">
+                <img src="Caurosal/{{product}}" [alt]="product" />
+            </div>
+        </ng-template>
+    </p-carousel>
+
+
+    <!-- Cover Page section -->
+    <section class="section-cover">
+        <div class="ele-container section-cover-main">
+            <div class="section-cover-content ">
+                <h1 class="section-cover-title">Authentic Tharu Experience</h1>
+                <p class="section-cover-subtitle">Taste • Stay • Celebrate</p>
+                <p>
+                    Immerse yourself in the rich cultural heritage of the Tharu community through our traditional
+                    cuisine, comfortable lodging, and beautiful event spaces.
+                </p>
+            </div>
+            <div class="section-cover-img">
+                <img src="Caurosal/img1.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+</div>
