Elements standard height added.

--- a/Code/DahitanGhar/Client/src/app/home/home.component.css
+++ b/Code/DahitanGhar/Client/src/app/home/home.component.css
@@ -64,5 +64,5 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     row-gap: 1rem;
-    padding: 2rem 0px;
+    padding: var(--space-lg) 0px;
 }
