Feature section structure created.

--- a/Code/DahitanGhar/Client/src/app/header/header.component.html
+++ b/Code/DahitanGhar/Client/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="logo.png" alt="logo">
     </div>
     <div class="btn-header-actions">
-        <button class="btn-book-table">
+        <button class="btn-golden-md">
             Book Table
         </button>
 
