--- a/Code/DahitanGhar/Client/src/app/home/home.component.html
+++ b/Code/DahitanGhar/Client/src/app/home/home.component.html
@@ -27,6 +27,7 @@
         </div>
     </section>
 
+    <!-- Service card section -->
     <section class="ele-container">
         <div class="section-service-cards">
             <div>
@@ -44,6 +45,14 @@
                     cardDescription="Spacious venues perfect for weddings, cultural events, and corporate gatherings with authentic Tharu decor.">
                 </service-card>
             </div>
+        </div>
+    </section>
+
+
+    <!-- Features section -->
+    <section class="ele-container" style="background-color: #f8f8f8;">
+        <div class="section-features">
+            <features></features>
         </div>
     </section>
 
